REL-103878 Scheduled Agent Job is not being removed after FileShare or Relativity Provider Intgeration Point has been deleted

--- a/Source/kCura.IntegrationPoints.Core.Contracts/kCura.IntegrationPoints.Core.Contracts.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Contracts/kCura.IntegrationPoints.Core.Contracts.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Agent\TaskParameters.cs" />
     <Compile Include="Custodian\CustodianConstants.cs" />
     <Compile Include="BatchReporter\IBatchReporter.cs" />
+    <Compile Include="Helpers\TaskTypeHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\kCura.ScheduleQueue.Core\kCura.ScheduleQueue.Core.csproj">
