--- a/Source/kCura.IntegrationPoints.Core.Contracts.Tests/kCura.IntegrationPoints.Core.Contracts.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Contracts.Tests/kCura.IntegrationPoints.Core.Contracts.Tests.csproj
@@ -62,6 +62,7 @@
       <Link>AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Unit\Agent\TaskJobSubmitterTests.cs" />
+    <Compile Include="Unit\Helpers\TaskTypeHelperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
