--- a/source/kCura.IntegrationPoints.ImportProvider/kCura.IntegrationPoints.ImportProvider.csproj
+++ b/source/kCura.IntegrationPoints.ImportProvider/kCura.IntegrationPoints.ImportProvider.csproj
@@ -93,6 +93,9 @@
       <Name>kCura.IntegrationPoints.ImportProvider.Parser</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir "$(ProjectDir)..\..\lib"
