--- a/Source/kCura.IntegrationPoints.ImportProvider.Parser/packages.config
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Parser/packages.config
@@ -6,5 +6,6 @@
   <package id="kCura.Data" version="9.4.310.7" targetFramework="net45" />
   <package id="kCura.Data.RowDataGateway" version="9.4.310.7" targetFramework="net45" />
   <package id="kCuraCore" version="9.4.310.7" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
   <package id="Relativity.ImportExport" version="9.4.310.7" targetFramework="net45" />
 </packages>
