--- a/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
@@ -180,6 +180,8 @@
     <Compile Include="Interfaces\IFieldParserFactory.cs" />
     <Compile Include="LoadFileFieldParser.cs" />
     <Compile Include="Models\ImportProviderSettings.cs" />
+    <Compile Include="Services\ImportPreviewService.cs" />
+    <Compile Include="Services\Interfaces\IImportPreviewService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="LICENSE.txt" />
@@ -196,6 +198,10 @@
     <ProjectReference Include="..\kCura.IntegrationPoints.Core\kCura.IntegrationPoints.Core.csproj">
       <Project>{a1ae667b-1b6e-4bb9-af1d-912620292283}</Project>
       <Name>kCura.IntegrationPoints.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\kCura.IntegrationPoints.Domain\kCura.IntegrationPoints.Domain.csproj">
+      <Project>{5d5b52b4-8769-431a-9743-b96f15fed5fd}</Project>
+      <Name>kCura.IntegrationPoints.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\kCura.IntegrationPoints.ImportProvider.Helpers\kCura.IntegrationPoints.ImportProvider.Helpers.csproj">
       <Project>{4353e00f-b152-418c-9cc7-9b444a95352e}</Project>
