REL-108383 adding ImportPreviewJob to keep track of all currently running import jobs; fleshing out ImportPreview service

--- a/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
+++ b/Source/kCura.IntegrationPoints.ImportProvider.Parser/kCura.IntegrationPoints.ImportProvider.Parser.csproj
@@ -176,6 +176,7 @@
     </Compile>
     <Compile Include="DataReaderFactory.cs" />
     <Compile Include="FieldParserFactory.cs" />
+    <Compile Include="ImportPreviewJob.cs" />
     <Compile Include="Interfaces\IDataReaderFactory.cs" />
     <Compile Include="Interfaces\IFieldParser.cs" />
     <Compile Include="Interfaces\IFieldParserFactory.cs" />
