--- a/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
+++ b/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Models\ButtonStateDTO.cs" />
     <Compile Include="Models\DestinationProviderDTO.cs" />
     <Compile Include="Models\DestinationWorkspaceDTO.cs" />
+    <Compile Include="Models\ImportPreviewStatus.cs" />
     <Compile Include="Models\ImportPreviewTable.cs" />
     <Compile Include="Models\JsTreeItemBaseDTO.cs" />
     <Compile Include="Models\JsTreeItemDTO.cs" />
