REL-104715 Export from Production Set \ REL-107531 Integration tests
Add integration tests for exporting production set

--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
@@ -201,8 +201,10 @@
     <Compile Include="TestCases\ItShouldExportFilesStartingFromGivenRecord.cs" />
     <Compile Include="TestCases\ItShouldExportFolderAndSubfoldersWithNatives.cs" />
     <Compile Include="TestCases\ItShouldExportFolderWithNatives.cs" />
+    <Compile Include="TestCases\ItShouldExportOnlyProductionSetLoadFile.cs" />
     <Compile Include="TestCases\ItShouldExportOriginalImagesPrecendence.cs" />
     <Compile Include="TestCases\ItShouldExportProducedImagesPrecedence.cs" />
+    <Compile Include="TestCases\ItShouldExportProductionSetWithNatives.cs" />
     <Compile Include="TestCases\ItShouldIncludeNativeFilesPathWithoutExportingNatives.cs" />
     <Compile Include="TestCases\ItShouldLogItemErrorForTooSmallSubdirectoryDigitPadding.cs" />
     <Compile Include="TestCases\ItShouldLogItemErrorForTooSmallVolumeDigitPadding.cs" />
