--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -6,7 +6,7 @@
 	<appSettings>
 		<!-- Service Bus specific app setings for messaging connections -->
 		<add key="ProtocolVersion" value="https"/>
-		<add key="targetHost" value="p-dv-vm-lsta.kcura.corp" />
+		<add key="targetHost" value="dv-pol-pl1.testing.corp" />
 		<add key="relativityUserName" value="relativity.admin@kcura.com" />
 		<add key="relativityPassword" value="Test1234!" />
 		<add key="databaseUserId" value="EDDSdbo" />
