Updated app.config to use RAP from bld-pkgs

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -7,7 +7,7 @@
 		<!-- Service Bus specific app setings for messaging connections -->
 		<add key="ProtocolVersion" value="https"/>
 		<add key="targetHost" value="dv-pol-pl1.testing.corp" />
-		<add key="relativityUserName" value="relativity.admin@kcura.com" />
+		<add key="relativityUserName" value="relativity.serviceaccount@kcura.com" />
 		<add key="relativityPassword" value="Test1234!" />
 		<add key="databaseUserId" value="EDDSdbo" />
 		<add key="databasePassword" value="P@ssw0rd@1" />
@@ -29,12 +29,12 @@
 		<add key="AdditionalFieldNames" value="Email BCC,Email CC,Email From,Email To" />
 		<add key="LongTextFieldName" value="Extracted Text" />
 		<add key="DestinationPath" value="c:\RIP_ExportTest" />
-		<add key="UseLocalRAP" value="true"/>
+		<add key="UseLocalRAP" value="false"/>
 		<add key="LocalRAPFileLocation" value ="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap"/>
 	</appSettings>
 	<kCura.Config>
-    <add key="connectionString" value="data source=p-dv-vm-lsta.kcura.corp;initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=p-dv-vm-lsta.kcura.corp;packet size=4096" />
-  </kCura.Config>
+		<add key="connectionString" value="data source=dv-pol-pl1.testing.corp; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=dv-pol-pl1.testing.corp;packet size=4096" />
+	</kCura.Config>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
