--- a/Source/kCura.IntegrationPoints.Dependencies/packages.config
+++ b/Source/kCura.IntegrationPoints.Dependencies/packages.config
@@ -46,6 +46,8 @@
   <package id="Relativity.ImportExport" version="9.4.309.5" targetFramework="net451" />
   <package id="Relativity.Kepler" version="1.0.1.226" targetFramework="net451" />
   <package id="Relativity.Kepler.Client" version="1.0.1.192" targetFramework="net451" />
+  <package id="Relativity.Logging" version="9.4.300" targetFramework="net451" />
+  <package id="Relativity.Logging.Interfaces" version="9.4.300" targetFramework="net451" />
   <package id="Relativity.SecretCatalog" version="1.0.16" targetFramework="net451" />
   <package id="Relativity.SecretCatalog.AzureKeyVault" version="1.0.16" targetFramework="net451" />
   <package id="Relativity.ServiceBus" version="2.1.2" targetFramework="net451" />
