--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -64,6 +64,14 @@
       <HintPath>..\packages\$(kCura_Crypto)\lib\net45\kCura.Crypto.dll</HintPath>
       <Private>True</Private>
     </Reference>
+	<Reference Include="Relativity.Logging, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(Relativity_Logging)\lib\net45\Relativity.Logging.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+	<Reference Include="Relativity.Logging.Interfaces, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(Relativity_Logging_Interfaces)\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="kCura.Data, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\$(kCura_Data)\lib\net45\kCura.Data.dll</HintPath>
       <Private>True</Private>
@@ -291,6 +299,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Attributes\LogApiExceptionFilterAttribute.cs" />
     <Compile Include="Attributes\JsonNetResult.cs" />
     <Compile Include="Attributes\WebAPIFilterException.cs" />
     <Compile Include="Constants.cs" />
