added ImportProviderDocumentController to project

--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -297,6 +297,7 @@
     <Compile Include="ControllerCustomPageService.cs" />
     <Compile Include="Controllers\API\ExportSettingsValidationController.cs" />
     <Compile Include="Controllers\API\ImportPreviewController.cs" />
+    <Compile Include="Controllers\API\ImportProviderDocumentController.cs" />
     <Compile Include="Controllers\ImportProviderController.cs" />
     <Compile Include="Controllers\API\SavedSearchesTreeController.cs" />
     <Compile Include="Controllers\API\SearchFolderController.cs" />
