--- a/Source/kCura.IntegrationPoints.FtpProvider.Tests/kCura.IntegrationPoints.FtpProvider.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.FtpProvider.Tests/kCura.IntegrationPoints.FtpProvider.Tests.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\$(NUnit)\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+		<Reference Include="Relativity.API, Culture=neutral, processorArchitecture=MSIL">
+			<HintPath>..\packages\$(Relativity_API)\lib\net45\Relativity.API.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
