REL-109307 Add logging to LDAP Provider

--- a/Source/kCura.IntegrationPoints.LDAPProvider/kCura.IntegrationPoints.LDAPProvider.csproj
+++ b/Source/kCura.IntegrationPoints.LDAPProvider/kCura.IntegrationPoints.LDAPProvider.csproj
@@ -115,6 +115,10 @@
       <HintPath>..\packages\$(Relativity_ImportExport)\lib\net45\Relativity.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Relativity.API, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(Relativity_API)\lib\net45\Relativity.API.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
