--- a/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration/kCura.IntegrationPoints.DocumentTransferProvider.Tests.Integration.csproj
@@ -48,42 +48,33 @@
     <Reference Include="kCura.Apps.Common.Utils">
       <HintPath>..\packages\$(kCura_Apps_Common_Utils)\lib\net45\kCura.Apps.Common.Utils.dll</HintPath>
     </Reference>
-    <Reference Include="kCura.Config, Version=9.4.329.5, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.Config.9.4.329.5\lib\net45\kCura.Config.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="kCura.Crypto, Version=9.4.329.5, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.Crypto.9.4.329.5\lib\net45\kCura.Crypto.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="kCura.Data.RowDataGateway, Version=9.4.329.5, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.Data.RowDataGateway.9.4.329.5\lib\net45\kCura.Data.RowDataGateway.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="kCura.Utility, Version=9.4.329.5, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\kCura.Utility.9.4.329.5\lib\net45\kCura.Utility.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NSubstitute, Version=1.10.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
-      <HintPath>..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+		<Reference Include="kCura.Config, Culture=neutral, processorArchitecture=MSIL">
+			<HintPath>..\packages\$(kCura_Config)\lib\net45\kCura.Config.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
+		<Reference Include="kCura.Crypto, Culture=neutral, processorArchitecture=MSIL">
+			<HintPath>..\packages\$(kCura_Crypto)\lib\net45\kCura.Crypto.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
+		<Reference Include="kCura.Data.RowDataGateway, Culture=neutral, processorArchitecture=MSIL">
+			<HintPath>..\packages\$(kCura_Data_RowDataGateway)\lib\net45\kCura.Data.RowDataGateway.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
+		<Reference Include="kCura.Utility, Culture=neutral, processorArchitecture=MSIL">
+			<HintPath>..\packages\$(kCuraCore)\lib\net45\kCura.Utility.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
+		<Reference Include="NSubstitute">
+			<HintPath>..\packages\$(NSubstitute)\lib\net45\NSubstitute.dll</HintPath>
+		</Reference>
     <Reference Include="nunit.framework, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\$(NUnit)\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Relativity.API, Version=9.4.329.5, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Relativity.API.9.4.329.5\lib\net45\Relativity.API.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Relativity.Authentication.Interfaces, Version=9.4.329.5, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Relativity.Authentication.Interfaces.9.4.329.5\lib\net45\Relativity.Authentication.Interfaces.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Relativity.Logging.Interfaces, Version=9.4.300.6, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Relativity.Logging.Interfaces.9.4.300\lib\net45\Relativity.Logging.Interfaces.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
+		<Reference Include="Relativity.API, Culture=neutral, processorArchitecture=MSIL">
+			<HintPath>..\packages\$(Relativity_API)\lib\net45\Relativity.API.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
@@ -116,7 +107,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\kCura.IntegrationPoint.Tests.Core\app.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
