--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
@@ -130,6 +130,10 @@
       <HintPath>..\packages\$(Relativity_Data)\lib\net45\Relativity.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
+		<Reference Include="Relativity.API, Culture=neutral, processorArchitecture=MSIL">
+			<HintPath>..\packages\$(Relativity_API)\lib\net45\Relativity.API.dll</HintPath>
+			<Private>True</Private>
+		</Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
