Update kcura.IntegrationPoints.FileDestinationProvider.Tests.Integration Release/App.config to match App.config used in rest of Test projects

--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/Release/App.config
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/Release/App.config
@@ -4,16 +4,33 @@
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 	</configSections>
 	<appSettings>
-		<add key="SavedSearchArtifactName" value="All Documents" /> 
-		<add key="ViewArtifactName" value="Documents" /> 
-		<add key="AdditionalFieldNames" value="Email BCC,Email CC,Email From,Email To" />
-		<add key="LongTextFieldName" value ="Extracted Text"/>
-		<add key="DestinationPath" value="c:\RIP_ExportTest" />
-		<add key="rsapClientUri" value="http://dv-pol-pl1.testing.corp//Relativity.Services" />
-		<add key="WebApiUrl" value="http://dv-pol-pl1.testing.corp//RelativityWebApi/" />
+		<!-- Service Bus specific app setings for messaging connections -->
+		<add key="ProtocolVersion" value="https"/>
+		<add key="targetHost" value="dv-pol-pl1.testing.corp" />
 		<add key="relativityUserName" value="relativity.admin@kcura.com" />
 		<add key="relativityPassword" value="Test1234!" />
-		<add key="targetHost" value="dv-pol-pl1.testing.corp" />
+		<add key="databaseUserId" value="EDDSdbo" />
+		<add key="databasePassword" value="P@ssw0rd@1" />
+		<add key="connectionStringEDDS" value="data source={0};initial catalog=EDDS;persist security info=False;user id={1};password={2}; workstation id={0};packet size=4096" />
+		<add key="connectionStringWorkspace" value="data source={1}; initial catalog=EDDS{0};persist security info=False;user id={2};password={3}; workstation id={1};packet size=4096" />
+		<add key="relativityUserFirstName" value="Relativity" />
+		<add key="relativityUserLastName" value="Admin" />
+		<add key="buildPackages" value="\\bld-pkgs.kcura.corp\Packages\IntegrationPoints" />
+		<add key="branch" value="develop" />
+		<add key="applicationPath" value="RAP" />
+		<add key="applicationRapFileName" value="RelativityIntegrationPoints.Auto.rap" />
+		<add key="ldapConnectionPath" value="kcura.corp/OU=Employees,OU=Accounts,OU=kCura,DC=kCura,DC=corp" />
+		<add key="ldapUsername" value="kcura\tv" />
+		<add key="ldapPassword" value="kCuraM0bileTelevision$" />
+		<add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
+		<add key="ClientSettingsProvider.ServiceUri" value="" />
+		<add key="SavedSearchArtifactName" value="All Documents" />
+		<add key="ViewArtifactName" value="Documents" />
+		<add key="AdditionalFieldNames" value="Email BCC,Email CC,Email From,Email To" />
+		<add key="LongTextFieldName" value="Extracted Text" />
+		<add key="DestinationPath" value="c:\RIP_ExportTest" />
+		<add key="UseLocalRAP" value="false"/>
+		<add key="LocalRAPFileLocation" value ="C:\SourceCode\integrationpoints\Applications\RelativityIntegrationPoints.Auto.rap"/>
 	</appSettings>
 	<kCura.Config>
 		<add key="connectionString" value="data source=dv-pol-pl1.testing.corp; initial catalog=EDDS;persist security info=False;user id=EDDSdbo;password=P@ssw0rd@1; workstation id=dv-pol-pl1.testing.corp;packet size=4096" />
