REL-105056, REL-105054: Passing delimiter and ecoding settings into Previewer; Refactor to create ImportSettingsBase model class;  These settings will be shared by both Provider and Preview services

--- a/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
+++ b/Source/kCura.IntegrationPoints.Domain/kCura.IntegrationPoints.Domain.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Models\ButtonStateDTO.cs" />
     <Compile Include="Models\DestinationProviderDTO.cs" />
     <Compile Include="Models\DestinationWorkspaceDTO.cs" />
+    <Compile Include="Models\ImportSettingsBase.cs" />
     <Compile Include="Models\ImportPreviewSettings.cs" />
     <Compile Include="Models\ImportPreviewStatus.cs" />
     <Compile Include="Models\ImportPreviewTable.cs" />
