Update FileDestinationProvider.Test.Integration csproj to fix TypeLoad Exception on Jenkins

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -457,6 +457,10 @@
       <allow>kCura.ScheduleQueue.Core.Tests.BatchManagerBaseTests.BatchTask_CorrectBatching(0,0)</allow>
       <allow>kCura.IntegrationPoints.Services.Tests.DocumentManagerLoggingTests.ItShouldLogErrorFromGetCurrentPromotionStatusAsync</allow>
       <allow>kCura.IntegrationPoints.Synchronizers.RDO.Tests.ImportServiceTests.GenerateImportFields_NativeFileImportServiceIsFalse_CorrectResult</allow>	  
+      <allow>kCura.IntegrationPoints.Agent.Tests.Tasks.ExportServiceManagerTests.Execute_CreateDestinationProvider_MakeSureToSetSourceProvider</allow>
+      <allow>kCura.IntegrationPoints.Data.Tests.Repositories.FieldRepositoryTests.RetrieveField_ReturnsValidArtifactId_Test</allow>
+      <allow>kCura.IntegrationPoints.Synchronizers.RDO.Tests.ImportSettingsTests.ImportSettings_ImportOverlayBehavior(null,UseRelativityDefaults)</allow>
+      <allow>kCura.IntegrationPoints.Services.Tests.IntegrationPointManagerLoggingTests.ItShouldLogErrorFromCreateIntegrationPointAsync</allow>
     </WhiteList>
   </TestRunner>
   <RAPBuilder>
